--- a/app/src/main/res/layout/fragment_notmyprofile.xml
+++ b/app/src/main/res/layout/fragment_notmyprofile.xml
@@ -106,7 +106,7 @@
                             <TextView
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/followers"
+                                android:id="@+id/textView_followersNumber"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:layout_gravity="center"
                                 android:textSize="18sp"
@@ -117,7 +117,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="followers"
-                                android:id="@+id/textView_Followers"/>
+                                android:id="@+id/textView_FollowersText"/>
 
                         </LinearLayout>
 
@@ -130,7 +130,7 @@
                             <TextView
                                 android:layout_width="60dp"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/following"
+                                android:id="@+id/textView_followingNumber"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:layout_gravity="center"
                                 android:textSize="18sp"
@@ -141,7 +141,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="following"
-                                android:id="@+id/textView_Following"/>
+                                android:id="@+id/textView_FollowingText"/>
 
                         </LinearLayout>
                     </LinearLayout>
