--- a/app/src/main/res/layout/activity_followers.xml
+++ b/app/src/main/res/layout/activity_followers.xml
@@ -19,7 +19,7 @@
         android:layout_below="@+id/toolbar"/>
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/followerActivity_frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
