--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#20CCC4</color>
+    <color name="colorPrimaryDark">#20CCC4</color>
     <color name="colorAccent">#F5340B</color>
     <color name="background">#E9E6E1</color>
-    <color name="purple">#653cd4</color>
+    <color name="purple">#20CCC4</color>
 </resources>
