--- a/app/src/main/res/drawable/custom_transparent_button.xml
+++ b/app/src/main/res/drawable/custom_transparent_button.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <!-- <stroke android:color="#20CCC4" android:width="2dp"/>-->
-    <gradient android:startColor="#048C94" android:endColor="#20CCC4" android:type="linear"/>
+    <stroke android:color="#FFFFFF" android:width="0dp"/>
     <corners android:radius="5dp"/>
 </shape>
