--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="Iniciar Sesión"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
@@ -65,7 +66,7 @@
         android:drawableStart="@drawable/ic_email"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Correo Electrónico"
+        android:hint="Correo electrónico"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,11 +91,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmail"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginTop="100dp"/>
+
+    </LinearLayout>
+
     <Button
+        android:textColor="@android:color/darker_gray"
+        android:background="@drawable/custom_transparent_button"
         android:id="@+id/buttonLoginRouter"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="53dp"
         android:layout_weight="1"
         android:text="@string/rutero"
         android:textStyle="bold"
@@ -103,14 +119,17 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
+        android:textColor="@android:color/darker_gray"
         android:id="@+id/buttonLoginOrganization"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="53dp"
         android:layout_weight="1"
+        android:background="@drawable/custom_transparent_button"
         android:text="@string/organizaci_n"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonLoginRouter"
         app:layout_constraintTop_toTopOf="parent" />
 
