--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -9,9 +9,9 @@
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_width="283dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonLogIn" />
@@ -20,10 +20,11 @@
         android:id="@+id/textViewRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="212dp"
-        android:text="No tienes una cuenta? \n      Regístrate aqui"
+        android:layout_marginBottom="220dp"
+        android:text="¿No tienes una cuenta?\nRegístrate aquí"
+        android:textAlignment="center"
         android:textColor="#2196F3"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,9 +35,12 @@
         android:id="@+id/buttonLogIn"
         android:background="@drawable/custom_button"
         android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
         android:text="Iniciar Sesión"
+        android:textStyle="bold"
+        android:textAllCaps="false"
+        android:textSize="18sp"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +50,7 @@
         android:id="@+id/textView8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="@font/righteous"
         android:gravity="center"
         android:letterSpacing="0.25"
@@ -60,13 +64,14 @@
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="230dp"
         android:background="@drawable/custom_input_login"
-        android:drawableStart="@drawable/ic_email"
+        android:drawableStart="@drawable/custom_email_icon"
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Correo electrónico"
+        android:textSize="18sp"
         android:inputType="textPersonName"
         android:paddingStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,13 +82,14 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/custom_input_login"
-        android:drawableStart="@drawable/ic_lock"
+        android:drawableStart="@drawable/custom_lock_icon"
         android:drawablePadding="12dp"
         android:ems="10"
         android:hint="Contraseña"
+        android:textSize="18sp"
         android:inputType="textPassword"
         android:paddingStart="12dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,14 +99,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            android:layout_marginTop="100dp"/>
+            android:layout_marginTop="100dp"
+            android:background="@android:color/darker_gray" />
 
     </LinearLayout>
 
@@ -109,11 +114,13 @@
         android:background="@drawable/custom_transparent_button"
         android:id="@+id/buttonLoginRouter"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="53dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="65dp"
         android:layout_weight="1"
         android:text="@string/rutero"
+        android:textAllCaps="false"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -121,13 +128,15 @@
     <Button
         android:textColor="@android:color/darker_gray"
         android:id="@+id/buttonLoginOrganization"
+        android:textAllCaps="false"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="53dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="65dp"
         android:layout_weight="1"
         android:background="@drawable/custom_transparent_button"
         android:text="@string/organizaci_n"
         android:textStyle="bold"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonLoginRouter"
