Short Refactory Login

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -38,9 +38,7 @@
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:text="Iniciar Sesión"
-        android:textStyle="bold"
-        android:textAllCaps="false"
-        android:textSize="18sp"
+        style="@style/ButtonText"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,9 +116,7 @@
         android:layout_marginTop="65dp"
         android:layout_weight="1"
         android:text="@string/rutero"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        android:textSize="18sp"
+        style="@style/ButtonText"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -128,15 +124,13 @@
     <Button
         android:textColor="@android:color/darker_gray"
         android:id="@+id/buttonLoginOrganization"
-        android:textAllCaps="false"
         android:layout_width="0dp"
         android:layout_height="35dp"
         android:layout_marginTop="65dp"
         android:layout_weight="1"
         android:background="@drawable/custom_transparent_button"
         android:text="@string/organizaci_n"
-        android:textStyle="bold"
-        android:textSize="18sp"
+        style="@style/ButtonText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonLoginRouter"
