--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -87,7 +87,7 @@
         android:text="Registrarse"
         android:background="@drawable/custom_button"
         android:textColor="#FFFFFF"
-        style="@style/ButtonText"
+        style="@style/TitleButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
