--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -39,7 +39,7 @@
         android:layout_marginTop="20dp"
         android:text="Iniciar Sesión"
         android:textColor="#FFFFFF"
-        style="@style/TitleButtonText"
+        style="@style/LargeButtonText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
@@ -116,7 +116,7 @@
         android:layout_marginTop="65dp"
         android:layout_weight="1"
         android:text="@string/rutero"
-        style="@style/TitleButtonText"
+        style="@style/LargeButtonText"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -130,7 +130,7 @@
         android:layout_weight="1"
         android:background="@drawable/custom_transparent_button"
         android:text="@string/organizaci_n"
-        style="@style/TitleButtonText"
+        style="@style/LargeButtonText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/buttonLoginRouter"
