--- a/app/src/main/res/layout/activity_register_organization.xml
+++ b/app/src/main/res/layout/activity_register_organization.xml
@@ -9,8 +9,8 @@
 
     <EditText
         android:id="@+id/editTextOrganiName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="45dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="150dp"
         android:layout_marginEnd="30dp"
@@ -24,8 +24,8 @@
 
     <EditText
         android:id="@+id/editTextOrganiPass"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="45dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
@@ -39,8 +39,8 @@
 
     <EditText
         android:id="@+id/editTextOrganiPassConf"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="45dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
@@ -54,8 +54,8 @@
 
     <EditText
         android:id="@+id/editTextOrganiNif"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="45dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
@@ -69,13 +69,13 @@
 
     <EditText
         android:id="@+id/editTextOrganiMail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="45dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="Correo Electrónico"
+        android:hint="Correo electrónico"
         android:inputType="textPersonName"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,13 +84,15 @@
 
     <Button
         android:id="@+id/buttonOrganiRegister"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="260dp"
+        android:layout_height="45dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="150dp"
         android:text="Registrarse"
-        android:textSize="24sp"
+        android:background="@drawable/custom_button"
+        android:textColor="#FFFFFF"
+        style="@style/LargeButtonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
