--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#20CCC4</color>
     <color name="colorPrimaryDark">#AAAAAA</color>
-    <color name="colorAccent">#20CCC4</color>
+    <color name="colorAccent">#048C94</color>
     <color name="background">#E9E6E1</color>
 </resources>
