--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#20CCC4</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#20CCC4</item> <!-- this is for the Action Bar. -->
+        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item> this is for the one all the way up. -->
+        <item name="colorAccent">#039BE5</item>
     </style>
 
     <style name="TitleTextView">
@@ -12,7 +12,6 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">17sp</item>
     </style>
 
     <style name="NotTitleTextView">
@@ -21,10 +20,15 @@
         <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
-    <style name="TitleButtonText">
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textSize">18sp</item>
+    <style name="LargeButtonText">
+    <item name="android:textAllCaps">false</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="MediumButtonText">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+    </style>
 </resources>
