--- a/app/src/main/res/layout/activity_introduce_new_route_data.xml
+++ b/app/src/main/res/layout/activity_introduce_new_route_data.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/route_name_textField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/route_name"
+                android:hint="@string/route_name_hint"
                 android:gravity="center"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
