Añadido Spinner para seleccionar categoria en la creación de la ruta

--- a/app/src/main/res/layout/activity_introduce_new_route_data.xml
+++ b/app/src/main/res/layout/activity_introduce_new_route_data.xml
@@ -43,6 +43,13 @@
                     android:layout_marginTop="50dp"
                     android:layout_marginEnd="80dp"
                     android:layout_marginStart="25dp"/>
+            <Spinner
+                    android:id="@+id/route_category_spinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15sp"
+                    android:entries="@array/route_category"
+                    android:spinnerMode="dropdown"/>
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
