--- a/app/src/main/res/layout/activity_introduce_new_route_data.xml
+++ b/app/src/main/res/layout/activity_introduce_new_route_data.xml
@@ -5,7 +5,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".mainMenu.userCreatedRoutes.IntroduceNewRouteDataActivity">
+        tools:context=".mainMenu.userCreatedRoutes.IntroduceNewRouteDataActivity"
+        android:background="@color/background">
 
     <LinearLayout
             android:orientation="vertical"
@@ -18,7 +19,8 @@
                 android:id="@+id/introduce_new_route_data_toolbar"
                 android:background="@color/emphasizedBackground"
                 app:title="@string/finalize_route_creation_toolbar_title"
-                android:textAlignment="center" app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"/>
+                android:textAlignment="center" app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
+        />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -30,7 +32,9 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp">
+                android:layout_marginBottom="20dp"
+                app:boxBackgroundColor="@color/emphasizedBackground"
+        >
 
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/route_name_textInputEditText"
@@ -45,14 +49,28 @@
                     android:textSize="@dimen/text_field_label_font_size"
                     android:layout_marginTop="50dp"
                     android:layout_marginEnd="80dp"
-                    android:layout_marginStart="25dp"/>
-            <Spinner
-                    android:id="@+id/route_category_spinner"
-                    android:layout_width="match_parent"
+                    android:layout_marginStart="25dp"
+                    android:fontFamily="@font/righteous"/>
+
+            <RelativeLayout
                     android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:background="@color/emphasizedBackground"
                     android:layout_marginTop="15sp"
-                    android:entries="@array/route_category"
-                    android:spinnerMode="dropdown"/>
+            >
+                <Spinner
+                        android:id="@+id/route_category_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:entries="@array/route_category"
+                        android:spinnerMode="dropdown" android:layout_alignParentTop="true"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginBottom="8dp"/>
+            </RelativeLayout>
+
+
+
 
         </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
@@ -66,6 +84,6 @@
             android:text="@string/finalize"
             android:textColor="@color/white"
             app:backgroundTint="@color/colorAccent"
-            android:textAlignment="center"/>
+            android:textAlignment="center" android:fontFamily="@font/righteous" android:textSize="16sp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
