Reemplazado string explícita por uso del fichero de recursos de strings

--- a/app/src/main/res/layout/activity_create_new_route.xml
+++ b/app/src/main/res/layout/activity_create_new_route.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_gravity="bottom|center"
-            android:text="Finalizar"
+            android:text="@string/finalize"
             app:backgroundTint="@color/colorAccent"/>
 
     <fragment
