--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,6 +4,7 @@
       tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
         <item
                 android:id="@+id/Profile"
                 android:icon="@drawable/ic_menu_camera"
@@ -11,7 +12,7 @@
         <item
                 android:id="@+id/UserCreatedRoutes"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="@string/menu_user_created_routes"/>
+                android:title="@string/menu_user_created_routes" />
         <item
             android:id="@+id/RouteSearchFragment"
             android:icon="@drawable/ic_menu_slideshow"
@@ -19,12 +20,12 @@
 
         <item
             android:id="@+id/nav_searchUsers"
-            android:icon="@drawable/ic_user"
+            android:icon="@drawable/ic_person"
             android:title="@string/menu_userSearch" />
 
         <item
-                android:id="@+id/nav_marketplace"
-                android:icon="@drawable/ic_menu_slideshow"
-                android:title="@string/menu_marketplace"/>
+            android:id="@+id/nav_marketplace"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_marketplace"/>
     </group>
 </menu>
