Create new Route

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,14 +21,16 @@
     </style>
 
     <style name="LargeButtonText">
-    <item name="android:textAllCaps">false</item>
-    <item name="android:textStyle">bold</item>
-    <item name="android:textSize">18sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textAlignment">center</item>
     </style>
 
     <style name="MediumButtonText">
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:textAlignment">center</item>
     </style>
 </resources>
