--- a/app/src/main/res/layout/fragment_marketplace.xml
+++ b/app/src/main/res/layout/fragment_marketplace.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-    android:background="#BDBDBD"
+    android:background="#FFFFFF"
 tools:context=".ui.marketplace.marketplaceFragment">
 
     <TextView
@@ -13,7 +13,7 @@ tools:context=".ui.marketplace.marketplaceFragment">
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Marketplace"
-        android:textSize="36sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,17 +29,19 @@ tools:context=".ui.marketplace.marketplaceFragment">
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:text="@string/discounts"
-        app:backgroundTint="#FF5722"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceName" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewMarketplaceName"
+        style="@style/LargeButtonText"
+        android:textColor="@color/white"/>
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="PUNTOS"
+        android:text="Puntos"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,12 +159,32 @@ tools:context=".ui.marketplace.marketplaceFragment">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:text="BOOSTS"
+        android:text="Boosts"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewMarketplace5e" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="190dp"
+            android:background="@color/colorPrimary" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="430dp"
+            android:background="@color/colorPrimary" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textViewMarketplaceBoost2w"
