--- a/app/src/main/res/layout/fragment_route_search_result.xml
+++ b/app/src/main/res/layout/fragment_route_search_result.xml
@@ -9,10 +9,13 @@
 
     <Button
             android:id="@+id/button_second"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="45dp"
             android:layout_marginBottom="32dp"
             android:text="@string/previous"
+            android:textColor="@color/white"
+            style="@style/LargeButtonText"
+            android:backgroundTint="@color/colorPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.532"
