--- a/app/src/main/res/layout/fragment_user_created_routes.xml
+++ b/app/src/main/res/layout/fragment_user_created_routes.xml
@@ -16,14 +16,16 @@
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/create_new_route_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            style="@style/LargeButtonText"
+            android:layout_width="200dp"
+            android:layout_height="45dp"
             android:layout_margin="16dp"
             android:layout_gravity="bottom|center"
             android:text="Nueva Ruta"
             android:layout_marginBottom="683dp"
             android:layout_marginEnd="275dp"
-            app:backgroundTint="@color/colorAccent"
+            app:backgroundTint="@color/colorPrimary"
+            android:textColor="@color/white"
     />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
