--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -59,7 +59,7 @@
                     android:id="@+id/image_profile"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/defaultprofilepic" />
+                    android:src="@drawable/defaultprofile" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
