--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -22,14 +22,18 @@
         android:layout_marginLeft="5dp">
 
         <TextView
-            style="@style/LargeTextView"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:id="@+id/username"
             android:text="username"
             android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
             android:maxLines="1" />
 
         <TextView
-            style="@style/MediumTextView"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
             android:id="@+id/fullname"
             android:text="Full Name"
             android:textSize="15sp"
